<resources>
    <string name="app_name">ResumeShare</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="tv_account">account</string>
    <string name="tv_password">password</string>
    <string name="btn_login">login</string>
    <string name="btn_register">register</string>
    <string name="tv_education">Education BackGround</string>
    <string name="tv_experience">Professional Experience</string>
    <string name="tv_skill">Skills</string>
    <string name="tv_defaultname">NOT FILLED YET</string>
    <string-array name="menuitem_title">
        <item>Home</item>
        <item>Profile</item>
        <item>Contacts</item>
        <item>Invitation</item>
        <item>Settings</item>
    </string-array>
    <string name="hint_account">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">password again</string>
    <string name="hint_signup">Not a member? Sign up now</string>
    <string name="hint_signin">Already is member. Sign in now</string>
    <string name="hint_add_school">Your School</string>
    <string name="hint_add_major">Your Major</string>
    <string name="hint_add_degree">Your Degree</string>
    <string name="hint_add_company">Your Company</string>
    <string name="hint_add_position">Your Position</string>
    <string name="hint_add_skill">Your Skill</string>
    <string name="hint_add_firstname">Your FirstName</string>
    <string name="hint_add_secondname">Your Second</string>
    <string name="hint_home_fragment">Find People Nearby</string>
    <string name="btn_default">Button</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_refuse">Refuse</string>
    <string name="school">School</string>
    <string name="major">Major</string>
    <string name="degree">Degree</string>
    <string name="company">Company</string>
    <string name="position">Position</string>
    <string name="startyear">StartYear</string>
    <string name="finishyear">FinishYear</string>
    <string name="btn_send">Send</string>
    <string name="logout">Logout</string>
    <string name="tv_name">Name  : </string>
    <string name="tv_email">Email : </string>
</resources>
