<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fragmentbackground"
    tools:context=".views.fragments.ResumeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="center"
        >
        <edu.brandeis.cs.jiahuiming.resumeshare.views.widgets.CircleImageView
            android:id="@+id/civ_profile_image"
            android:layout_width="@dimen/navigation_imageview"
            android:layout_height="@dimen/navigation_imageview"
            android:background="@drawable/man"
            app:civ_border_color="@color/white"
            app:civ_border_width="@dimen/border_width"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark_transparent">

        <TextView
            android:id="@+id/tv_profile_account"
            android:layout_width="fill_parent"
            style="@style/resume_item_title"
            android:gravity="center_vertical"
            android:textSize="@dimen/sn_16sp"
            />

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="match_parent"
            style="@style/resume_item_title"
            android:gravity="center_vertical"
            android:textSize="@dimen/sn_16sp"
            android:text="@string/tv_defaultname" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/splitline_hight"
            android:background="@color/black"></View>

        <TextView
            android:layout_width="fill_parent"
            style="@style/resume_item_title"
            android:gravity="center_vertical"
            android:textSize="@dimen/sn_16sp"
            android:text="@string/tv_education"
            />


        <ListView
            android:id="@+id/lv_fr_education"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark_transparent"
            android:gravity="center_vertical"
            android:textSize="@dimen/sn_16sp"
            />

        <TextView
            android:layout_width="fill_parent"
            style="@style/resume_item_title"
            android:gravity="center_vertical"
            android:textSize="@dimen/sn_16sp"
            android:text="@string/tv_experience"
            />



        <ListView
            android:id="@+id/lv_fr_experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark_transparent"
            android:gravity="center_vertical"
            android:textSize="@dimen/sn_16sp"
            />

        <TextView
            android:layout_width="fill_parent"
            style="@style/resume_item_title"
            android:gravity="center_vertical"
            android:textSize="@dimen/sn_16sp"
            android:text="@string/tv_skill"
            />

        <ListView
            android:id="@+id/lv_fr_skill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark_transparent"
            android:gravity="center_vertical"
            android:textSize="@dimen/sn_16sp"
            />
    </LinearLayout>
</LinearLayout>
